--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -5,7 +5,7 @@ body {
   padding: 30px;
   max-width: 970px;
   margin: 0 auto;
-  background-color: #ffdd61;
+  background-color: #fff;
 
   h1,
   h2,
@@ -13,6 +13,7 @@ body {
   h4,
   h5,
   p {
+    color: #000;
     margin: 0;
   }
 }
@@ -30,7 +31,7 @@ body {
     width: 100%;
     padding-bottom: 56.25%;
     position: relative;
-    background: #ffdd61;
+    background: #fff;
 
     #eggman {
       position: absolute;
@@ -38,6 +39,10 @@ body {
       height: 100%;
       background-image: url("../img/skyline.jpg");
       opacity: 0;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 
     #loading-circle {
@@ -180,6 +185,7 @@ body {
         width: 22%;
         left: 38.8%;
         top: -15%;
+        opacity: 0.6;
         display: none;
       }
 
@@ -194,8 +200,9 @@ body {
         width: 20%;
         z-index: 2;
         left: 40%;
-        top: 54%;
+        top: 53.9%;
         display: none;
+        cursor: pointer;
       }
 
       #speaker-off,
@@ -237,66 +244,12 @@ body {
       }
     }
 
-    #flashlight-holder {
-      display: none;
-      position: absolute;
-      height: 20%;
-      width: 33.2%;
-      top: 101%;
-      left: 46.6%;
-      z-index: 1;
-
-      #flashlight {
-        position: absolute;
-        width: 68%;
-        left: 20.5%;
-        z-index: 2;
-      }
-
-      #flashlight-button {
-        position: absolute;
-        left: 22%;
-        top: 145%;
-        width: 13%;
-        z-index: 5;
-        cursor: pointer;
-      }
-
-      #flashlight-beam {
-        position: absolute;
-        width: 115%;
-        left: -2.9%;
-        top: -600%;
-        z-index: 10;
-        opacity: 0;
-        display: none;
-      }
-
-      #flashlight-mask-right {
-        position: absolute;
-        width: 167.4%;
-        left: 72.5%;
-        top: -267%;
-        z-index: 1;
-        opacity: 0;
-      }
-
-      #flashlight-mask-left {
-        position: absolute;
-        width: 169.2%;
-        left: -132%;
-        top: -266%;
-        z-index: 1;
-        opacity: 0;
-      }
-    }
-
     #spotlight-holder {
       position: absolute;
       height: 20%;
       width: 33.2%;
       top: 105%;
-      left: 36%;
+      left: -11%;
 
       #spotlight {
         position: absolute;
@@ -322,13 +275,24 @@ body {
         top: 6%;
         opacity: 0;
       }
+
+      #spotlight-beam {
+        position: absolute;
+        top: -661%;
+        left: 116%;
+        transform: rotate(50deg);
+        z-index: 3;
+        opacity: 0;
+        width: 115%;
+        display: none;
+      }
     }
 
     #spotlight-lever {
       position: absolute;
-      height: 48%;
-      top: 20%;
-      left: -13%;
+      height: 58%;
+      top: 101%;
+      left: 61%;
       cursor: pointer;
     }
 
@@ -353,10 +317,7 @@ body {
     margin: 10px 0;
   }
 
-  #about-credit,
-  #contact-credit,
-  #record-credit,
-  #title-credit {
+  .credit {
     display: none;
   }
 }
