Adding pool cue animation

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -665,16 +665,6 @@ body {
     padding-bottom: 56.25%;
     position: relative;
     background: #fff; }
-    .screen .screen-frame #eggman {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-image: url("../img/skyline.jpg");
-      opacity: 0;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover; }
     .screen .screen-frame #loading-circle {
       position: absolute;
       left: 50%;
@@ -719,6 +709,12 @@ body {
         position: absolute;
         left: 47.4%;
         display: none; }
+    .screen .screen-frame #pool-cue {
+      position: absolute;
+      width: 58%;
+      top: 37%;
+      left: -59%;
+      transform: rotate(-7deg); }
     .screen .screen-frame #pop-up-mask {
       display: none;
       opacity: 0;
@@ -783,9 +779,9 @@ body {
         opacity: 0.6;
         display: none; }
       .screen .screen-frame #record #record-lines {
-        width: 70%;
-        left: 15%;
-        bottom: 21%; }
+        width: 73.9%;
+        left: 13.1%;
+        top: -6.3%; }
       .screen .screen-frame #record #spotlight-glass {
         position: absolute;
         width: 20%;
