--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,8 +1,7 @@
-
 // Responsive breakpoints
 $small-break: 480px;
+$mid-break: 668px;
 $big-break: 780px;
-
 // Colors
 $purple: #9012FE;
 $darkest-blue: #0374DA;
