--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -98,10 +98,10 @@ a {
 
     #pool-cue {
       position: absolute;
-      width: 58%;
-      top: 37%;
-      left: -59%;
-      transform: rotate(-7deg);
+      width: 5%;
+      top: 100%;
+      left: 47.4%;
+      z-index: 5;
     }
 
     #pop-up-mask {
