--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -676,6 +676,7 @@ a {
       width: 0;
       height: auto;
       overflow: hidden;
+      z-index: 6;
       cursor: pointer; }
       .screen .screen-frame #loading-circle img {
         width: 100%; }
