--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -112,12 +112,30 @@ a {
       cursor: pointer;
     }
     #moon-shadow {
-      display: none;
+      opacity: 0;
       width: 20%;
       position: absolute;
       left: 61%;
       top: 32.1%;
       z-index: 6;
+    }
+
+    #lunar-lander {
+      position: absolute;
+      width: 8%;
+      top: 34%;
+      left: 39%;
+      transform: rotate(-44deg);
+      z-index: 7;
+    }
+
+    #lunar-pod {
+      position: absolute;
+      width: 5%;
+      top: 28.2%;
+      left: 38.2%;
+      transform: rotate(-44deg);
+      z-index: 7;
     }
 
     #ufo {
