--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -734,20 +734,15 @@ a {
       left: 61%;
       top: 32.1%;
       z-index: 6; }
-    .screen .screen-frame #lunar-lander {
+    .screen .screen-frame #rocket {
       position: absolute;
       width: 8%;
       top: 34%;
-      left: 39%;
-      transform: rotate(-44deg);
+      left: 103%;
+      transform: rotate(-121deg);
       z-index: 7; }
-    .screen .screen-frame #lunar-pod {
-      position: absolute;
-      width: 5%;
-      top: 28.2%;
-      left: 38.2%;
-      transform: rotate(-44deg);
-      z-index: 7; }
+      .screen .screen-frame #rocket #rocket-ship {
+        width: 100%; }
     .screen .screen-frame #ufo {
       position: absolute;
       width: 89%;
