--- a/app/scss/_main.scss
+++ b/app/scss/_main.scss
@@ -122,14 +122,24 @@ a {
 
     #rocket {
       position: absolute;
-      width: 8%;
-      top: 34%;
-      left: 103%;
-      transform: rotate(-121deg);
+      width: 11%;
+      height: 16%;
+      top: 42%;
+      left: 102%;
       z-index: 7;
 
       #rocket-ship{
-        width: 100%;
+        width: 49%;
+        position: absolute;
+        z-index: 1;
+        left: 7%;
+      }
+      .propellant {
+        position: absolute;
+        left: 0%;
+        height: 21%;
+        top: 25%;
+        width: auto;
       }
     }
 
